# RC522

./: Arduino.cpp  Arduino.hpp  CMakeLists.txt  HardwareSerial.cpp  HardwareSerial.hpp  Platform.cpp  Platform.hpp  Platform_HardwareSPI.cpp  Platform_HardwareSPI.h  Platform_HardwareSerial.cpp  Platform_HardwareSerial.h  Print.cpp  Print.hpp  RC522.cpp  RC522.sln  RC522.vcxproj  RC522.vcxproj.filters  SPI.cpp  SPI.hpp
